--- a/Kivy/Scoring/score.kv
+++ b/Kivy/Scoring/score.kv
@@ -16,7 +16,7 @@
     id: scorer
     CustBoxLayout:
         CustLabel:
-            text: 'Score Keeper'
+            text: 'Mahany class "like" counter'
             size_hint_x: 3
             font_size: 50
         CustButton:
@@ -25,7 +25,7 @@
             font_size: 40
     CustBoxLayout:
         CustLabel:
-            text: 'HOME'
+            text: 'BOYS'
             canvas:
                 Color:
                     rgba: [0, 102/255, 255/255, .5]
@@ -33,7 +33,7 @@
                     pos: self.x, self.y
                     size: self.width, self.height
         CustLabel:
-            text: 'AWAY'
+            text: 'GIRLS'
             canvas:
                 Color:
                     rgba: [255, 0, 0, .5]
